@@ -3,7 +3,7 @@ bin_PROGRAMS  =  eismint3_glide
 nodist_include_HEADERS := $(wildcard *.mod)
 EXTRA_DIST = f90_dep.mak eismint3_vars.def
 BUILT_SOURCES = eismint3_io.F90
-CLEANFILES = $(BUILT_SOURCES) f90_dep.mak
+CLEANFILES = $(BUILT_SOURCES) f90_dep.mak *.mod
 
 
 
@@ -22,7 +22,7 @@ AM_FCFLAGS = $(NETCDF_FCFLAGS)  $(F90_MODFLAG)$(top_builddir)/libglimmer-solve $
 eismint3_io.F90:	eismint3_vars.def $(top_srcdir)/libglimmer/ncdf_template.F90.in
 			$(PYTHON) $(top_srcdir)/scripts/generate_ncvars.py $^
 
-f90_dep.mak:	$(srcdir)/*.F90 $(BUILT_SOURCES)
+f90_dep.mak:	$(SOURCES)
 		$(PYTHON) $(top_srcdir)/scripts/f90_dependencies.py -o $@ $^
 
 -include f90_dep.mak
