@@ -9,7 +9,7 @@ dist_variable_DATA = $(variable_DATA)
 
 nodist_include_HEADERS := $(wildcard *.mod)
 EXTRA_DIST = f90_dep.mak 
-CLEANFILES = $(BUILT_SOURCES) glimmer_vers.F90 f90_dep.mak
+CLEANFILES = glimmer_vers.F90 f90_dep.mak *.mod
 libglimmer_la_SOURCES = glimmer_vers.F90 glimmer_commandline.F90 \
                        glimmer_global.F90 glimmer_utils.F90\
                        glimmer_log.F90 glimmer_paramets.F90 glimmer_physcon.F90 kelvin.F90 \
@@ -19,12 +19,13 @@ libglimmer_la_SOURCES = glimmer_vers.F90 glimmer_commandline.F90 \
                        glimmer_map_CFproj.F90 glimmer_map_proj4.F90 \
                        glimmer_map_types.F90 glimmer_map_init.F90 \
                        glimmer_map_trans.F90 glimmer_scales.F90
-
 nodist_libglimmer_la_SOURCES = glimmer_vers.F90
+libglimmer_la_LDFLAGS=-all-static
 
 libglimmer_IO_la_SOURCES = glimmer_anomcouple.F90 glimmer_filenames.F90 glimmer_ncdf.F90 \
                           glimmer_ts.F90 glimmer_config.F90 \
                           glimmer_writestats.F90 ncdf_utils.F90 writestats.c writestats.h cfortran.h 
+libglimmer_IO_la_LDFLAGS=-all-static
 
 nc2config_SOURCES = nc2config.F90
 
@@ -38,7 +39,6 @@ test_filenames_SOURCES = test_filenames.F90
 AM_FCFLAGS = $(NETCDF_FCFLAGS)
 LDADD = libglimmer-IO.la libglimmer.la $(NETCDF_LDFLAGS) $(HDF5_LDFLAGS) $(NETCDF_LIBS)
 AM_CFLAGS=$(CFORTRAN_CFLAGS)
-AM_LDFLAGS=-all-static
 
 # handling subversion versioning
 if HAVE_SVN
@@ -51,9 +51,5 @@ glimmer_vers.F90:	glimmer_vers.F90.in
 		cp $< $@
 endif
 
-
-f90_dep.mak:	$(srcdir)/*.F90 $(BUILT_SOURCES) glimmer_vers.F90
-		$(PYTHON) $(top_srcdir)/scripts/f90_dependencies.py -l -o $@ $^
-
 -include f90_dep.mak
-
+-include $(top_builddir)/make.rules
