@@ -2,6 +2,7 @@ bin_PROGRAMS  =  simple_glide
 lib_LTLIBRARIES = libglimmer-simple.la
 
 libglimmer_simple_la_SOURCES = simple_forcing.F90
+libglimmer_simple_la_LDFLAGS=-all-static
 
 simple_glide_SOURCES = simple_glide.F90
 simple_glide_LDADD = libglimmer-simple.la $(top_builddir)/libglide/libglide.la $(top_builddir)/libglimmer-solve/libglimmer-solve.la \
@@ -9,9 +10,8 @@ simple_glide_LDADD = libglimmer-simple.la $(top_builddir)/libglide/libglide.la $
                     $(NETCDF_LDFLAGS) $(HDF5_LDFLAGS) $(NETCDF_LIBS) $(BLAS_LIBS)
 
 AM_FCFLAGS = $(NETCDF_FCFLAGS) $(F90_MODFLAG)$(top_builddir)/libglimmer-solve $(F90_MODFLAG)$(top_builddir)/libglide $(F90_MODFLAG)$(top_builddir)/libglimmer
-AM_LDFLAGS=-all-static
 
-f90_dep.mak:	$(simple_glide_SOURCES)
-		$(PYTHON) $(top_srcdir)/scripts/f90_dependencies.py -o $@ $^
 
+CLEANFILES = f90_dep.mak *.mod
 -include f90_dep.mak
+-include $(top_builddir)/make.rules
